#
# doc: Pacemaker code
#
# Copyright (C) 2008 Andrew Beekhof
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
#
MAINTAINERCLEANFILES    = Makefile.in

modules =	__init__.py \
			cache.py \
			cibconfig.py \
			cibstatus.py \
			cibverify.py \
			clidisplay.py \
			cliformat.py \
			cmd_status.py \
			command.py \
			completers.py \
			config.py \
			corosync.py \
			crm_gv.py \
			crm_pssh.py \
			help.py \
			idmgmt.py \
			log_patterns_118.py \
			log_patterns.py \
			main.py \
			msg.py \
			options.py \
			ordereddict.py \
			pacemaker.py \
			parse.py \
			ra.py \
			report.py \
			rsctest.py \
			schema.py \
			scripts.py \
			template.py \
			term.py \
			tmpfiles.py \
			ui_assist.py \
			ui_cib.py \
			ui_cibstatus.py \
			ui_cluster.py \
			ui_configure.py \
			ui_context.py \
			ui_corosync.py \
			ui_history.py \
			ui_node.py \
			ui_options.py \
			ui_ra.py \
			ui_report.py \
			ui_resource.py \
			ui_root.py \
			ui_script.py \
			ui_site.py \
			ui_template.py \
			ui_utils.py \
			userdir.py \
			utils.py \
			constants.py \
			xmlbuilder.py \
			xmlutil.py

shelllibdir	= $(pyexecdir)/crmsh

shelllib_PYTHON = $(modules)
