#
# Author: Sun Jiang Dong <sunjd@cn.ibm.com>
# Copyright (c) 2004 International Business Machines
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
#
MAINTAINERCLEANFILES = Makefile.in

cibtestsdir		= 	$(datadir)/$(PACKAGE)/tests/cibtests
cibtests_DATA	= shadow.base \
	001.exp.xml 001.input \
	002.exp.xml 002.input \
	003.exp.xml 003.input \
	004.exp.xml 004.input

#			shouldn't need this next line...
EXTRA_DIST =		$(cibtests_DATA)
